--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,8 @@
 </header>
 <main>
     <div class="mainText">
-        <p>mc.digitalnook.net is a friendly modded survival Minecraft server.</p>
-        <p>There is also a PVP mode currently in development.</p>
+        <p>mc.digitalnook.net is a friendly, modded, survival Minecraft server for Java Edition.</p>
+        <p>There is also a PVP world, currently in development.</p>
     </div>
 </main>
 </body>
