--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,18 @@
     <h1>Welcome to mc.digitalnook.net!</h1>
 </header>
 <nav>
-    <a href="{{ url_for('how_to_connect') }}"><button>How to connect</button></a>
-    <a href="/survival_map/"><button>Survival Map</button></a>
-    <a href="{{ url_for('contact') }}"><button>Contact an admin</button></a>
-    <a href="{{ url_for('about') }}"><button>About the server</button></a>
+    <a href="{{ url_for('how_to_connect') }}">
+        <button>How to connect</button>
+    </a>
+    <a href="/survival_map/">
+        <button>Survival Map</button>
+    </a>
+    <a href="{{ url_for('contact') }}">
+        <button>Contact an admin</button>
+    </a>
+    <a href="{{ url_for('about') }}">
+        <button>About the server</button>
+    </a>
 </nav>
 
 </body>
