--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     {% include "meta.html" %}
     <link rel="stylesheet" type="text/css" href="/static/index.css">
-    <meta name="description" content="">
-    <title></title>
+    <meta name="description" content="Digital Nook Minecraft server">
+    <title>Digital Nook Minecraft</title>
 </head>
 <body>
 <header>
