--- a/templates/about.html
+++ b/templates/about.html
@@ -15,6 +15,7 @@
     <div class="mainText">
         <p>mc.digitalnook.net is a friendly, modded, survival Minecraft server for Java Edition.</p>
         <p>There is also a PVP world, currently in development.</p>
+        <p>Join the <a href="https://discord.com/invite/aNt8B8p">Discord server</a>!</p>
     </div>
 </main>
 </body>
