--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,8 +13,8 @@
 </header>
 <main>
     <div class="mainText">
-        <p>Email: <a href="mailto:tom@digitalnook.net">tom@digitalnook.net</a></p>
-        <p>Discord: <a href="https://discord.com/invite/aNt8B8p">Digitalnook Games</a></p>
+        <p><a href="mailto:tom@digitalnook.net">tom@digitalnook.net</a></p>
+        <p>Other Contact links at <a href="https://tomdougiamas.com/links">TomDougiamas.com</a>
     </div>
 </main>
 </body>
