--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
         <button>About the server</button>
     </a>
 </nav>
-
+<footer>
+    <a href="https://github.com/exciteabletom/mc.digitalnook.net">Source code available on Github</a>
+</footer>
 </body>
 </html>
