--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     </a>
 </nav>
 <footer>
-    <a href="https://github.com/exciteabletom/mc.digitalnook.net">Source code available on Github</a>
+    <a href="https://github.com/exciteabletom/mc.digitalnook.net">View source code</a>
 </footer>
 </body>
 </html>
