--- a/static/common.css
+++ b/static/common.css
@@ -8,7 +8,7 @@ html {
     box-sizing: border-box;
 
     background-color: #343434;
-    background-image: url("/static/images/landscape.png");
+    background-image: url("/static/images/landscape.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
