--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,8 @@
 </header>
 <main>
     <div class="mainText">
-        <p>mc.digitalnook.net is a friendly, modded, survival Minecraft server for Java Edition.</p>
-        <p>There is also a PVP world, currently in development.</p>
+        <p>mc.digitalnook.net is a modded survival Minecraft server for Java Edition.</p>
+        <p>We use the <a href="https://youtu.be/zmIvURR_-eg">Terralith datapack</a> for awesome modded terrain generation.</p>.
         <p>Join the <a href="https://discord.com/invite/aNt8B8p">Discord server</a>!</p>
     </div>
 </main>
