--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 <main>
     <div class="mainText">
         <p>mc.digitalnook.net is a modded survival Minecraft server for Java Edition.</p>
-        <p>We use the <a href="https://youtu.be/zmIvURR_-eg">Terralith datapack</a> for awesome modded terrain generation.</p>.
+        <p>We use the <a href="https://youtu.be/zmIvURR_-eg">Terralith datapack</a> for awesome terrain generation.</p>
         <p>Join the <a href="https://discord.com/invite/aNt8B8p">Discord server</a>!</p>
     </div>
 </main>
