Change about page wording; switch contact page to old world download page

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,9 @@
     <a href="/survival_map/">
         <button>Survival Map</button>
     </a>
-    <a href="{{ url_for('contact') }}">
-        <button>Contact an admin</button>
+	<!-- Path handled by nginx auto index -->
+	<a href="/old_worlds/">
+        <button>Download old worlds</button>
     </a>
     <a href="{{ url_for('about') }}">
         <button>About the server</button>
