--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,9 @@
 </header>
 <main>
     <div class="mainText">
-        <p>mc.digitalnook.net is a modded survival Minecraft server for Java Edition.</p>
-        <p>We use the <a href="https://youtu.be/zmIvURR_-eg">Terralith datapack</a> for awesome terrain generation.</p>
+        <p>mc.digitalnook.net is a network of survival Minecraft servers for Java Edition.</p>
+        <p>One server uses the <a href="https://youtu.be/zmIvURR_-eg">Terralith datapack</a> for awesome terrain
+	        generation, while the other is mostly vanilla.</p>
         <p>Join the <a href="https://discord.com/invite/aNt8B8p">Discord server</a>!</p>
     </div>
 </main>
