add finncraft map to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,9 @@
     <a href="{{ url_for('how_to_connect') }}">
         <button>How to connect</button>
     </a>
-	<!--
-    <a href="/survival_map/">
-        <button>Survival Map</button>
+    <a href="/map/">
+        <button>Finncraft Map</button>
     </a>
-    -->
 	<!-- Path handled by nginx auto index -->
 	<a href="/old_worlds/">
         <button>Download old worlds</button>
