--- a/static/article.css
+++ b/static/article.css
@@ -8,7 +8,7 @@ main {
 .mainText {
     max-width: 500px;
     min-width: 60%;
-    background: #34343488;
+    background: #343434;
     border-radius: 5px;
     padding: 1rem;
 }
