--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <header>
-    <h1>Welcome to mc.digitalnook.net!</h1>
+	<h1>Welcome to mc.digitalnook.net!</h1>
 </header>
 <nav>
     <a href="{{ url_for('how_to_connect') }}">
         <button>How to connect</button>
     </a>
     <a href="/map/">
-        <button>Finncraft Map</button>
+        <button>Realtime Map</button>
     </a>
 	<!-- Path handled by nginx auto index -->
 	<a href="/old_worlds/">
