--- a/static/index.css
+++ b/static/index.css
@@ -22,7 +22,7 @@ nav > a > button {
     border: solid black 3px;
     border-radius: 5px;
     transition: transform 0.2s ease-out;
-    background-color: #444444cc;
+    background-color: #343434;
 }
 
 nav > a > button:hover {
@@ -42,7 +42,7 @@ footer {
 }
 
 footer a {
-    color: #a0a0a0;
+    color: #ffffff;
     text-decoration: none;
     transition: transform 0.2s;
 }
