--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,8 @@
 </header>
 <main>
     <div class="mainText">
-        <p>mc.digitalnook.net is a network of survival Minecraft servers for Java Edition.</p>
-        <p>Join the <a href="https://discord.com/invite/aNt8B8p">Discord server</a>!</p>
+        <p>Sydney based, lightly modded Minecraft server</p>
+        <p>Feel free to join the <a href="https://discord.com/invite/aNt8B8p">Discord server</a>!</p>
     </div>
 </main>
 </body>
