--- a/templates/meta.html
+++ b/templates/meta.html
@@ -2,3 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="/static/images/favicon.ico">
 <link rel="stylesheet" type="text/css" href="/static/common.css">
+<link rel="stylesheet" type="text/css" href="/static/fonts.css">
